<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DniRobocze">

    <TextView
        android:id="@+id/textPierwszaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_poczatkowa"
        app:layout_constraintBottom_toTopOf="@+id/datePicker1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="391dp"
        android:layout_height="185dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/datePicker2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textDrugaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_koncowa"
        app:layout_constraintBottom_toTopOf="@+id/datePicker2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker1"
        app:layout_constraintVertical_bias="0.55" />

    <DatePicker
        android:id="@+id/datePicker2"
        android:layout_width="391dp"
        android:layout_height="194dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textKalendarzowe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni_kalendarzowe_0"
        app:layout_constraintBottom_toTopOf="@+id/textRobocze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker2"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/textRobocze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni_robocze_0"
        app:layout_constraintBottom_toTopOf="@+id/buttonDROk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker2" />

    <Button
        android:id="@+id/buttonDROk"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker2"
        app:layout_constraintVertical_bias="0.73" />

</androidx.constraintlayout.widget.ConstraintLayout>