<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <NumberPicker
        android:id="@+id/yearPicker"
        android:layout_width="290dp"
        android:layout_height="190dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="370dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datePopielec"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dateWielkanoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/dateAdwent"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRobocze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/textBCialo"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/boze_cialo"
        app:layout_constraintBottom_toTopOf="@+id/textAdwent"
        app:layout_constraintEnd_toStartOf="@+id/dateBCialo"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/dateBCialo"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dateAdwent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/textWielkanoc"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/wielkanoc"
        app:layout_constraintBottom_toTopOf="@+id/textBCialo"
        app:layout_constraintEnd_toStartOf="@+id/dateWielkanoc"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/textAdwent"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/adwent"
        app:layout_constraintBottom_toTopOf="@+id/buttonNiedziele"
        app:layout_constraintEnd_toStartOf="@+id/dateAdwent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/textPopielec"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/popielec"
        app:layout_constraintBottom_toTopOf="@+id/textWielkanoc"
        app:layout_constraintEnd_toStartOf="@+id/datePopielec"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/dateWielkanoc"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dateBCialo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"
        app:layout_constraintVertical_bias="0.846" />

    <Button
        android:id="@+id/buttonNiedziele"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:text="@string/niedziele"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonRobocze"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/buttonRobocze"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:text="@string/dni_robocze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNiedziele"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>